--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -43,7 +43,7 @@ body.lock {
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
-        font-size: 100px;
+        font-size: 100wh;
         font-weight: 600;
         letter-spacing: 3px;
 
@@ -1418,7 +1418,7 @@ body.lock {
             top: 0;
             left: 0;
             width: 100%;
-            height: 100%;
+            height: 100vh;
             background: #fff;
             display: flex;
             justify-content: center;
